--- a/pages/orderList/index.html
+++ b/pages/orderList/index.html
@@ -27,17 +27,11 @@
 			      url:'orderList.html',
 			      id:'orderList.html',
 			      styles:{
-			        top:'45px',//mui标题栏默认高度为45px；
-			        bottom:'0px'//默认为0px，可不定义；
+			        top:'45px',
+			        bottom:'0px'
 			      }
 			    }],
 			});
-//			addOneOrder.addEventListener('tap', function(event) {
-//				mui.openWindow({
-//					    url:'../addOrder/index.html',
-//					    id:'addOrder/index.html',
-//					})
-//			})
 		</script>
 	</body>
 
