--- a/pages/orderList/orderList.html
+++ b/pages/orderList/orderList.html
@@ -17,9 +17,6 @@
 			.mui-table-view-chevron .mui-table-view-cell{
 				padding-right:15px ;
 			}
-			/*.mui-table-view{
-				background: transparent !important;
-			}*/
 			.mui-table-view:before{
 				height: 0 !important;
 			}
@@ -40,32 +37,16 @@
 		</div>
 		
 		<script src="../../js/mui.min.js"></script>
+		<script src="../../js/utils.js"></script>
 		<script type="text/javascript">
 			mui.init()
-			var Url = 'http://220.248.107.62:8086/gxJK/'
-//			var Url = 'http://http://205.168.1.112:8082/'
 			var OrderList = []
-			var formatTime = function(date) {
-				var year = date.getFullYear()
-				var month = date.getMonth() + 1
-				var day = date.getDate()
-				
-				var hour = date.getHours()
-				var minute = date.getMinutes()
-				var second = date.getSeconds()
-				
-				return [year, month, day].map(formatNumber).join('-') + '/' + [hour, minute, second].map(formatNumber).join(':')
-			}
-			var formatNumber = function(n) {
-				n = n.toString()
-				return n[1] ? n : '0' + n
-			}
 			var ReLogin = function(){
 				mui.openWindow({
 				    url:'../../index.html',
 				    id:'index.html',
 				})
-			}
+			};
 			var GetOrderList = function(){
 					var OrderListHtml = ''
 					mui.get(Url + 'orderList',{},function(data){
@@ -89,22 +70,20 @@
 							$('.RecordList').append(OrderListHtml)
 						},'json'
 					);
-			}
-			GetOrderList()
+			};
+			
+			GetOrderList();
 			
 			//去添加订单
 			var ToModifyOrder = function(Idx){
 			    console.info(OrderList[Idx]);
 				window.localStorage.setItem('orderId',OrderList[Idx].order_no);
                 window.localStorage.setItem('orderDetail',JSON.stringify(OrderList[Idx]));
-                // window.localStorage.setItem('startTime',(formatTime(new Date(SalaryList[IDX].fdate.time))).substr(0,10));
-                // window.localStorage.setItem('endTime',(formatTime(new Date(SalaryList[IDX].fdate.time))).substr(0,10));
-
                 mui.openWindow({
 					    url:'../addOrder/index.html',
 					    id:'addOrder/index.html',
 					})
-			}
+			};
 			
 //			mui.init({
 //			  pullRefresh : {
