--- a/pages/orderModify/index.html
+++ b/pages/orderModify/index.html
@@ -27,8 +27,8 @@
 			      url:'orderModify.html',
 			      id:'orderModify.html',
 			      styles:{
-			        top:'45px',//mui标题栏默认高度为45px；
-			        bottom:'0px'//默认为0px，可不定义；
+			        top:'45px',
+			        bottom:'0px'
 			      }
 			    }],
 			});
