--- a/pages/operation/operation.html
+++ b/pages/operation/operation.html
@@ -168,20 +168,20 @@
     </div>-->
     <div class="mui-row ColumnBar Margin_T0">
         <div class="mui-col-sm-6 mui-col-xs-6 ">
-            成型车间一组开工日期：<span id="cx_begin_time"></span>
+            成型一组开工日期：<span id="cx_begin_time"></span>
         </div>
 
         <div class="mui-col-sm-6 mui-col-xs-6 ">
-            成型车间一组完工日期：<span id="cx_end_time"></span>
+            成型一组完工日期：<span id="cx_end_time"></span>
         </div>
     </div>
     <div class="mui-row ColumnBar Margin_T0">
         <div class="mui-col-sm-6 mui-col-xs-6 ">
-            成型车间二组开工日期：<span id="cx2_begin_time"></span>
+            成型二组开工日期：<span id="cx2_begin_time"></span>
         </div>
 
         <div class="mui-col-sm-6 mui-col-xs-6 ">
-            成型车间二组完工日期：<span id="cx2_end_time"></span>
+            成型二组完工日期：<span id="cx2_end_time"></span>
         </div>
     </div>
     <div class="mui-row ColumnBar Margin_T0">
@@ -268,7 +268,7 @@
             <span id="chengxing-status"></span>
         </div>
         <div class="mui-col-sm-1 mui-col-xs-1 ">
-            成型车间一组
+            成型一组
         </div>
         <div class="mui-col-sm-2 mui-col-xs-2 ">
             <span id="chengxing" hidden></span>
@@ -289,7 +289,7 @@
             <span id="chengxing2-status"></span>
         </div>
         <div class="mui-col-sm-1 mui-col-xs-1 ">
-            成型车间二组
+            成型二组
         </div>
         <div class="mui-col-sm-2 mui-col-xs-2 ">
             <span id="chengxing2" hidden></span>
