--- a/pages/orderAdd/index.html
+++ b/pages/orderAdd/index.html
@@ -3,7 +3,7 @@
 
 	<head>
 		<meta charset="UTF-8">
-		<title>工序流转</title>
+		<title>新增订单</title>
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
 		<link href="../../css/mui.min.css" rel="stylesheet" />
 		<link href="../../css/style.css" rel="stylesheet" />
@@ -17,18 +17,18 @@
 	<body>
 		<header class="mui-bar mui-bar-nav">
 			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
-			<h1 class="mui-title">工序流转</h1>
+			<h1 class="mui-title">新增订单</h1>
 		</header>
 		
 		<script src="../../js/mui.min.js"></script>
 		<script type="text/javascript">
 			mui.init({
 			    subpages:[{
-			      url:'addOrder.html',
-			      id:'addOrder.html',
+			      url:'orderAdd.html',
+			      id:'orderAdd.html',
 			      styles:{
-			        top:'45px',//mui标题栏默认高度为45px；
-			        bottom:'0px'//默认为0px，可不定义；
+			        top:'45px',
+			        bottom:'0px'
 			      }
 			    }],
 			});
