--- a/pages/orderList/index.html
+++ b/pages/orderList/index.html
@@ -18,20 +18,31 @@
 		<header class="mui-bar mui-bar-nav">
 			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
 			<h1 class="mui-title">订单列表</h1>
+			<span id="addOneOrder" class="mui-icon mui-icon-plus FloatRight"></span>
 		</header>
 		
 		<script src="../../js/mui.min.js"></script>
 		<script type="text/javascript">
-			mui.init({
-			    subpages:[{
-			      url:'orderList.html',
-			      id:'orderList.html',
-			      styles:{
-			        top:'45px',
-			        bottom:'0px'
-			      }
-			    }],
-			});
+			(function($) {
+				$.init({
+				    subpages:[{
+				      url:'orderList.html',
+				      id:'orderList.html',
+				      styles:{
+				        top:'45px',
+				        bottom:'0px'
+				      }
+				    }],
+				});
+				
+				//新增订单
+				$('#addOneOrder')[0].addEventListener('tap', function(event) {
+					mui.openWindow({
+					    url:'../orderAdd/index.html',
+					    id:'add/orderAdd.html',
+					})
+				});
+			})(mui);
 		</script>
 	</body>
 
